Bug #10070
smbd problem on system reboot
0%
Description
while host is rebooting (shutting down) the following message appears in syslog:
Dec 18 10:24:18 beastie smbd[1180]: [ID 801721 daemon.error] SMF initialization problem: %s Dec 18 10:24:18 beastie : handle not bound
Updated by Toomas Soome about 2 years ago
- Description updated (diff)
- Category set to cifs - CIFS server and client
Updated by Toomas Soome about 2 years ago
- Subject changed from smbd problem on system reboot: to smbd problem on system reboot
Updated by Gordon Ross 6 days ago
Is this still reproducible? If so, can you please provide more details? eg. force a crash dump when this happens.
Updated by Toomas Soome 6 days ago
Gordon Ross wrote in #note-3:
Is this still reproducible? If so, can you please provide more details? eg. force a crash dump when this happens.
Seems so:
Feb 20 20:20:47 beastie smbd1140: [ID 801721 daemon.error] SMF initialization problem: %s
Feb 20 20:20:47 beastie : handle not bound
Feb 20 20:20:52 beastie unix: [ID 201750 kern.warning] WARNING: Fast reboot is not supported on this platform due to presence of boot-time modules
Feb 20 20:20:58 beastie genunix: [ID 672855 kern.notice] syncing file systems...
Feb 20 20:20:58 beastie genunix: [ID 904073 kern.notice] done
It does happen on reboot, just a moment before system resets.
Updated by Gordon Ross 5 days ago
Do you have any notes on when this first appeared for you? (what build etc)
Updated by Toomas Soome 5 days ago
Gordon Ross wrote in #note-5:
Do you have any notes on when this first appeared for you? (what build etc)
Since the error is only logged in syslog and not on console, I likely did discover it just accidentally, but I do keep quite up to date with gate, so +/- few commits, it should have been whatever gate had 2018-12-18.
Updated by Gordon Ross 5 days ago
Took a stab at debugging this. It happens (sometimes) during SMB service shutdown.
080448f8 libc.so.1`_assert_c99(fd19ce3a, fd19cae0, 2be, fef70cec) 08044928 libshare_smb.so.1`smb_smf_scf_init+0x191(fd19cfbb) 08044d68 libshare_smb.so.1`smb_config_getstr+0x56(17, 8044dc0, 200) 08044d98 libshare_smb.so.1`smb_config_get+0x47(17, 8044dc0, 200) 08044fd8 libshare_smb.so.1`smb_load_proto_properties+0x80() 08044fe8 libshare_smb.so.1`smb_share_init+0x38() 080455b8 libshare.so.1`proto_plugin_init+0x318() 08046698 libshare.so.1`sa_init_impl+0x6f(1, 0) 080466b8 libshare.so.1`sa_init+0x10(1) 080466d8 libmlsvc.so.1`smb_shr_sa_enter+0x9b() 08047d38 libmlsvc.so.1`smb_shr_unload+0x1c() 08047d58 smbd_service_fini+0x4c() 08047da8 main+0x2af(8047dac, fef585c8) 08047de8 _start_crt+0x96(2, 8047e14, fefd0c9c, 0, 0, 0) 08047e08 _start+0x1a(2, 8047ed8, 8047eed, 0, 8047ef3, 8047f0e)
For some reason, at this point we cannot get a libshare handle.
Specifically, the call to scf_handle_bind() fails, here:
http://src.illumos.org/source/xref/illumos-gate/usr/src/lib/smbsrv/libsmb/common/smb_scfutil.c?r=a90cf9f2#655
The error is SCF_ERROR_NO_SERVER, which (I guess) means the svc.configd has already stopped?
Probably something changed about tear-down order to break this.
The smb_shr_unload() function was added in #11025 so this started at some point after that went in.