10070 smbd problem on system reboot

Debugging...